modification de mon code html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <input type="checkbox" name="burger" id="burger">
             <label for="burger"><i class="fa-solid fa-bars fa-3x"></i></label>
-            <div class="menu de navigation">
+            <div class="menudenavigation">
                 <ul>
                     <li><a href="#"></a>NOS FORMATIONS</li>
                     <li><a href="#"></a>NOUS RECRUTONS</li>
@@ -46,7 +46,7 @@
     </header>
         <div>
             <ul>
-                <!-- Créationn d'une liste non ordonnée-->
+                <!-- Création d'une liste non ordonnée-->
                 <li><a href="#"></a>NOS FORMATIONS</li>
                 <li><a href="https://ecandidature.dsi-ap.com/annonces"></a>NOUS RECRUTONS</li>
                 <li><a href="https://www.dsi-ap.com/site_dsi/"></a>NOS METIERS</li>
@@ -56,7 +56,7 @@
                 <li><a href="#"></a>NOUS CONTACTER</li>
             </ul>
         </div>
-                    <!-- Création d'une liste non ordonnée
+                 <!-- Création d'une liste non ordonnée
                     création d'une POP-PUP (un bouton qui renvoi une information qu'est-ce qu'une entreprise adaptée)
                     Création d'un bouton (le role du référent handicap)
                     Création d'un bouton (méthode d'intégration)
@@ -68,15 +68,15 @@
                     -->
     <main>
         <div class="formulaire">     
-            <button id="button1"></button>QU'EST-CE QU'UNE ENTREPRISE ADAPTEE
-            <button id="button2"></button>LE ROLE DU REFERENT HANDICAP
-            <button id="button3"></button>METHODE D'INTEGRATION
-            <button id="button4"></button>PARTICULARITE DU RECRUTEMENT
-            <button id="button5"></button>DECOUVREZ NOS FORMATIONS
-            <button id="button6"></button>LE MAINTIEN DANS L'EMPLOI
-            <button id="button7"></button>L'OETH
-            <button id="button8"></button>LE HANDICAP AU TRAVAIL
-            <button id="button9"></button>LE HANDICAP    
+            <button id="button1">QU'EST-CE QU'UNE ENTREPRISE ADAPTEE</button>
+            <button id="button2">LE ROLE DU REFERENT HANDICAP</button>
+            <button id="button3">METHODE D'INTEGRATION</button>
+            <button id="button4">PARTICULARITE DU RECRUTEMENT</button>
+            <button id="button5">DECOUVREZ NOS FORMATIONS</button>
+            <button id="button6">LE MAINTIEN DANS L'EMPLOI</button>
+            <button id="button7">L'OETH</button>
+            <button id="button8">LE HANDICAP AU TRAVAIL</button>
+            <button id="button9">LE HANDICAP </button>    
         </div>
         <!--<img src="img/diagramme.png" alt="diagramme camembert">-->
         <div class="graphique">
@@ -139,8 +139,7 @@
                     id="email">accueil@dsi-ap.com
                     </a>
                 </address>
-            </div>
-            
+            </div>            
             <!--on créer un formulaire avec l'élément de propriété <form></form>
                 Création des  champs à remplir pour la création du formulaire 
             Création d'une pop-up mail message envoyer (envoyer) 
@@ -161,16 +160,13 @@
                     <input type="submit" value="Envoyé" id="envoi" size="25">           
                 <!--Importation de mes images depuis l'outil fontawesome 
                 on récupère le chemin de référence de notre icone-->
-
                 <div id="social">
                     <div class="social1">
                         <a href="">"<i class="fa-brands fa-facebook"></i></a>
                     </div>
-
                     <div class="social2">
                         <a href=""><i class="fa-brands fa-twitter"></i></a>
                     </div>
-
                     <div class="social3">
                         <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     </div>
