modification de ma navbar dans le css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro&family=Literata">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro&family=Literata">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <title>cdasophia2023</title>
 </head>
+
 <body>
     <header>
         <div class="navbar">
@@ -27,35 +32,38 @@
                     <li><a href="#"></a>ACTUALITE</li>
                     <li><a href="#"></a>NOUS CONTACTER</li>
                 </ul>
-            </div>    
+            </div>
         </div>
         <div class="boxheader">
-            <h1><span>CDA</span> SOPHIA 2023</h1>
-            <div class="bannière">
-                <p>Nôtre organisation peut aider les employeurs
-                et les employes à naviguer sur les questions liéés 
-                au handicap au ttravail et à trouver des solutions
-                pour créer un environnement de travail plus inclusif.
-                </p>
+            <div class="presentation">
+                <h1><span>CDA</span> SOPHIA 2023</h1>
+                <div class="bannière">
+                    <p>Nôtre organisation peut aider les employeurs
+                        et les employes à naviguer sur les questions liéés
+                        au handicap au ttravail et à trouver des solutions
+                        pour créer un environnement de travail plus inclusif.
+                    </p>
+                </div>
             </div>
-            <div class="réunionprofessionnel">
+            <div class="reunionpro">
                 <img src="img/Capture.PNG" alt="réunion professionnel">
             </div>
         </div>
     </header>
-        <div>
-            <ul>
-                <!-- Création d'une liste non ordonnée-->
-                <li><a href="#"></a>NOS FORMATIONS</li>
-                <li><a href="https://ecandidature.dsi-ap.com/annonces"></a>NOUS RECRUTONS</li>
-                <li><a href="https://www.dsi-ap.com/site_dsi/"></a>NOS METIERS</li>
-                <li><a href="#"></a>VOS AVANTAGES</li>
-                <li><a href="https://www.dsi-ap.com/site_dsi/nous-connaitre/plus-de-20-ans-d-histoire.html"></a>NOUS CONNAITRE</li>
-                <li><a href="#"></a>ACTUALITE</li>
-                <li><a href="#"></a>NOUS CONTACTER</li>
-            </ul>
-        </div>
-                 <!-- Création d'une liste non ordonnée
+    <div>
+        <ul>
+            <!-- Création d'une liste non ordonnée-->
+            <li><a href="#"></a>NOS FORMATIONS</li>
+            <li><a href="https://ecandidature.dsi-ap.com/annonces"></a>NOUS RECRUTONS</li>
+            <li><a href="https://www.dsi-ap.com/site_dsi/"></a>NOS METIERS</li>
+            <li><a href="#"></a>VOS AVANTAGES</li>
+            <li><a href="https://www.dsi-ap.com/site_dsi/nous-connaitre/plus-de-20-ans-d-histoire.html"></a>NOUS
+                CONNAITRE</li>
+            <li><a href="#"></a>ACTUALITE</li>
+            <li><a href="#"></a>NOUS CONTACTER</li>
+        </ul>
+    </div>
+    <!-- Création d'une liste non ordonnée
                     création d'une POP-PUP (un bouton qui renvoi une information qu'est-ce qu'une entreprise adaptée)
                     Création d'un bouton (le role du référent handicap)
                     Création d'un bouton (méthode d'intégration)
@@ -66,7 +74,7 @@
                     Création d'un bouton (le handicap)
                     -->
     <main>
-        <div class="formulaire">     
+        <div class="formulaire">
             <button id="button1">QU'EST-CE QU'UNE ENTREPRISE ADAPTEE</button>
             <button id="button2">LE ROLE DU REFERENT HANDICAP</button>
             <button id="button3">METHODE D'INTEGRATION</button>
@@ -75,7 +83,7 @@
             <button id="button6">LE MAINTIEN DANS L'EMPLOI</button>
             <button id="button7">L'OETH</button>
             <button id="button8">LE HANDICAP AU TRAVAIL</button>
-            <button id="button9">LE HANDICAP </button>    
+            <button id="button9">LE HANDICAP </button>
         </div>
         <!--<img src="img/diagramme.png" alt="diagramme camembert">-->
         <div class="graphique">
@@ -101,12 +109,12 @@
                 <div class="employés" id="icone4">
                     <i class="fa-solid fa-users fa-7x"></i>
                     <div class="enfant absol4">
-                        <p><span>1185</span> employés</p> 
+                        <p><span>1185</span> employés</p>
                     </div>
                 </div>
                 <div class="effectif d'embauches" id="icone5">
                     <i class="fa-solid fa-clipboard-check fa-7x"></i>
-                    <div  class="enfant absol5">
+                    <div class="enfant absol5">
                         <p><span>177</span> embauches en 2020</p>
                     </div>
                 </div>
@@ -117,7 +125,7 @@
                     </div>
                 </div>
             </div>
-        </div>    
+        </div>
     </main>
     <footer>
         <!--Création de ma page formulaire-->
@@ -127,18 +135,16 @@
                 <!-- L'élément adress permet d'indiquer une information de prise de contact à une personne ou un groupe de personne -->
                 <address>
                     <a>>80 Route des lucioles
-                    Les espaces de Sophia
-                    Batiment K
-                    06560 VALBONNE
+                        Les espaces de Sophia
+                        Batiment K
+                        06560 VALBONNE
                     </a>
-                    <a href="tel:+330562741000"
-                    id="tel">Tél:05-62-74-10-00 
+                    <a href="tel:+330562741000" id="tel">Tél:05-62-74-10-00
                     </a>
-                    <a href="mailto:accueil@dsi-ap.com"
-                    id="email">accueil@dsi-ap.com
+                    <a href="mailto:accueil@dsi-ap.com" id="email">accueil@dsi-ap.com
                     </a>
                 </address>
-            </div>            
+            </div>
             <!--on créer un formulaire avec l'élément de propriété <form></form>
                 Création des  champs à remplir pour la création du formulaire 
             Création d'une pop-up mail message envoyer (envoyer) 
@@ -146,7 +152,7 @@
             <form action="NomPrénom" method="post">
                 <div class="champs1">
                     <Label for="NomPrénom"></Label>
-                    <input type="text" name="NomPrénom" id="NomPrénom" placeholder="NomPrénom" size="25" required> 
+                    <input type="text" name="NomPrénom" id="NomPrénom" placeholder="NomPrénom" size="25" required>
                 </div>
                 <div class="champs2 ">
                     <Label for="Entreprise"></Label>
@@ -156,7 +162,7 @@
                     <Label for="Email"></Label>
                     <input type="email" name="email" id="Email" placeholder="email" size="25" required>
                 </div>
-                    <input type="submit" value="Envoyé" id="envoi" size="25">           
+                <input type="submit" value="Envoyé" id="envoi" size="25">
                 <!--Importation de mes images depuis l'outil fontawesome 
                 on récupère le chemin de référence de notre icone-->
                 <div id="social">
@@ -169,9 +175,10 @@
                     <div class="social3">
                         <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                </div>        
-            </form>        
+                </div>
+            </form>
         </div>
-    </footer> 
+    </footer>
 </body>
+
 </html>
