modification du desktop

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-FR">
 
 <head>
     <meta charset="UTF-8">
@@ -50,9 +50,9 @@
             </div>
         </div>
     </header>
-    <div>
+    <!-- <div>
         <ul>
-            <!-- Création d'une liste non ordonnée-->
+            // Création d'une liste non ordonnée
             <li><a href="#"></a>NOS FORMATIONS</li>
             <li><a href="https://ecandidature.dsi-ap.com/annonces"></a>NOUS RECRUTONS</li>
             <li><a href="https://www.dsi-ap.com/site_dsi/"></a>NOS METIERS</li>
@@ -62,7 +62,7 @@
             <li><a href="#"></a>ACTUALITE</li>
             <li><a href="#"></a>NOUS CONTACTER</li>
         </ul>
-    </div>
+    </div> -->
     <!-- Création d'une liste non ordonnée
                     création d'une POP-PUP (un bouton qui renvoi une information qu'est-ce qu'une entreprise adaptée)
                     Création d'un bouton (le role du référent handicap)
@@ -74,7 +74,7 @@
                     Création d'un bouton (le handicap)
                     -->
     <main>
-        <div class="formulaire">
+        <div class="sensi">
             <button id="button1">QU'EST-CE QU'UNE ENTREPRISE ADAPTEE</button>
             <button id="button2">LE ROLE DU REFERENT HANDICAP</button>
             <button id="button3">METHODE D'INTEGRATION</button>
@@ -85,8 +85,10 @@
             <button id="button8">LE HANDICAP AU TRAVAIL</button>
             <button id="button9">LE HANDICAP </button>
         </div>
-        <!--<img src="img/diagramme.png" alt="diagramme camembert">-->
-        <div class="graphique">
+        <div class="diag">
+            <img src="img/diagramme.png" alt="diagramme camembert">
+        </div>
+        <!-- <div class="graphique">
             <div id="camembert">
                 <div class="chiffre d'affaire" id="icone1">
                     <i class="fa-solid fa-coins fa-7x"></i>
@@ -125,7 +127,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer>
         <!--Création de ma page formulaire-->
